--- a/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
@@ -130,6 +130,7 @@ Error :
         <!-- ######### -->
         <!-- FACETS START -->
         <!-- TMPL_IF NAME="opacfacets" -->
+        <!-- TMPL_IF NAME="NoZebra" -->
         <div id="facets" >
             <dl>
             <dt onclick="var Elt=document.getElementById('facets_list');if (Elt.style.display!='block'){Elt.style.display='block';} else {Elt.style.display='none';}">Refine Your Search</dt>
@@ -157,6 +158,7 @@ Error :
             </ul>
             </dd>
         </div>
+        <!-- /TMPL_UNLESS -->
         <!-- /TMPL_IF -->
         <!-- FACETS END -->
         
