--- a/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
@@ -158,7 +158,7 @@ Error :
             </ul>
             </dd>
         </div>
-        <!-- /TMPL_UNLESS -->
+        <!-- /TMPL_IF -->
         <!-- /TMPL_IF -->
         <!-- FACETS END -->
         
