adding popup to display biblio at inventory

--- a/koha-tmpl/intranet-tmpl/prog/en/tools/inventory.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/inventory.tmpl
@@ -123,7 +123,7 @@
                 <!-- TMPL_VAR NAME="barcode" -->
             </td>
             <td>
-                <p><b><!-- TMPL_VAR NAME="itemcallnumber" --></b> - <!-- TMPL_VAR NAME="title" --></p>
+                <p><b><!-- TMPL_VAR NAME="itemcallnumber" --></b> - <a href=# onclick="javascript:window.open('/cgi-bin/koha/catalogue/MARCdetail.pl?biblionumber=<!--TMPL_VAR Name="biblionumber"-->','Catalogue -- Biblio <!--TMPL_VAR Name="biblionumber"-->','width=800,height=600,toolbar=false');"><!-- TMPL_VAR NAME="title" --></a></p>
                 <p><!-- TMPL_VAR NAME="author" --></p>
             </td>
             <td>
