add control of 'return date' if it 's a special or repeatable holidays , and return a right return date (renewal)

--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -718,6 +718,7 @@ No patron matched <!-- TMPL_VAR name="message" -->
     <input type="hidden" value="circ" name="destination" />
     <input type="hidden" name="cardnumber" value="<!-- TMPL_VAR NAME="cardnumber" -->" />
     <input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
+    <input type="hidden" name="branch" value="<!-- TMPL_VAR NAME="branch" -->" />	
     
 <!-- TMPL_IF NAME="todayissues" -->
     <table>
