--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -210,6 +210,7 @@
     <h2>Items on loan</h2>
     <form action="/cgi-bin/koha/reserve/renewscript.pl" method="post">
         <input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
+	<input type="hidden" name="branch" value="<!-- TMPL_VAR NAME="branch" -->" />
     <table>
         <tr>
             <th scope="col">Title</th>
