--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/MARCdetail.tmpl
@@ -48,22 +48,23 @@
         <!-- TMPL_IF NAME="9XX" -->
             <a href="javascript:active(9)" class="tab_inactive" id="link9">9</a>
         <!-- /TMPL_IF -->
-        <a href="javascript:active(10)" class="tab_inactive" id="link10">Items</a>
+            <a href="javascript:active(10)" class="tab_inactive" id="link10">Items</a>
     </div>
 
     <div name="0XX" id="0XX" class="content_visible">
         <!-- TMPL_LOOP NAME="0XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                	<div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
-                <p class="subfield">
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                <p class="subfield_line">
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -76,22 +77,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div> <!-- class='tag' -->
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="1XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="1XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -104,22 +107,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="2XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="2XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -132,22 +137,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="3XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="3XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -160,22 +167,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="4XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="4XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -188,22 +197,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div  id="5XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="5XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -216,22 +227,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="6XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="6XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -244,22 +257,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div  id="7XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="7XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -272,22 +287,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="8XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="8XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -300,22 +317,24 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
     <div id="9XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="9XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p class="tag">
+                    <div class="tag">
+                    <div class="tag_title">
                         <!-- TMPL_VAR NAME="tag" -->
-                    </p>
+                    </div>
                 <!-- TMPL_ELSE -->
                     <br />
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
-                    <label>&nbsp;
-                    <!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
+                    <label class="labelsubfield">&nbsp;
+                    <!-- TMPL_UNLESS name="hide_marc" --><b><!-- TMPL_VAR NAME="marc_subfield" --></b><!-- /TMPL_UNLESS -->
                     <span title="<!-- TMPL_VAR name="long_desc" -->"><!-- TMPL_VAR NAME="short_desc" --></span></label>
                     <!-- TMPL_VAR NAME="marc_value" -->
                     <!-- TMPL_IF name="link" -->
@@ -328,6 +347,7 @@
                     <!-- /TMPL_IF -->
                 </p>
             <!-- /TMPL_LOOP -->
+            </div>
         <!-- /TMPL_LOOP -->
     </div>
     
@@ -349,8 +369,7 @@
         </table>
     </div>
 <script language="JavaScript" type="text/javascript">
-function active(numlayer)
-{
+function active(numlayer){
     for (i=0; i <= 10 ; i++ ) {
         var tab = document.getElementById(i+'XX');
         if (numlayer==i) {
@@ -371,38 +390,35 @@ function active(numlayer)
 }
 
 function confirm_deletion(count) {
-    //     var is_confirmed = confirm('Are you sure you want to delete this biblio?');
-//     if (is_confirmed) {
-//         window.location="../cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
-//     }
- var is_confirmed;
+
+	 var is_confirmed;
 	if (count>0){
-		    is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
-		    }
-        else{
+		is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
+	}
+    else{
 		    is_confirmed= confirm('Are you sure you want to delete this biblio? ');
 	}
 
-    
      if (is_confirmed) {
         if (count=0){
-// 	window.location="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
-	window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
-	}
-		
+			window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+		}
     }
-    }
+}
 
 function Dopop(link) {
-    newin=window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
+    window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
 }
+
 function Changefwk(FwkList) {
-var fwk = FwkList.options[FwkList.selectedIndex].value;
-window.location = "MARCdetail.pl?biblionumber=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
+	var fwk = FwkList.options[FwkList.selectedIndex].value;
+	window.location = "MARCdetail.pl?biblionumber=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
 }
+
 function Addbiblio(op) {
-var fwk = document.forms['f'].Frameworks.options[document.forms['f'].Frameworks.selectedIndex].value;
-window.location = "../cataloguing/addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
+	var fwk = document.forms['f'].Frameworks.options[document.forms['f'].Frameworks.selectedIndex].value;
+	window.location = "../cataloguing/addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
 }
+
 </script>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
