--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/blinddetail-biblio-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/blinddetail-biblio-search.tmpl
@@ -3,57 +3,41 @@
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <script type="text/javascript">
-
-function go()
-{
-var index_start = <!-- TMPL_VAR NAME="index" -->;
-var whichfield = opener.opener.document.f.tag[index_start].value;
-i=index_start
-// go forward, until reaching the end of the field.
-while (i<opener.opener.document.f.field_value.length) {
-	if (opener.opener.document.f.tag[i].value == whichfield && opener.opener.document.f.subfield[i].value == '9') {
-		opener.opener.document.f.field_value[i].value = "<!-- TMPL_VAR NAME="authid" -->";
-	}
-	<!-- TMPL_LOOP NAME="0XX" -->
-		<!-- TMPL_LOOP NAME="subfield" -->
-			if (opener.opener.document.f.tag[i].value == whichfield && opener.opener.document.f.subfield[i].value == '<!-- TMPL_VAR NAME="marc_subfield" -->') 
-			{
-				opener.opener.document.f.field_value[i].value = "<!-- TMPL_VAR NAME="marc_value" -->";
-			}
-		<!-- /TMPL_LOOP -->
-	<!-- /TMPL_LOOP -->
-	if (opener.opener.document.f.tag[i].value != whichfield) {
-		i=opener.opener.document.f.field_value.length;
-	}
-	i++;
-}
-// go backward until the beginning of the field
-i=index_start
-while (i>=0) {
-	if (opener.opener.document.f.tag[i].value == whichfield && opener.opener.document.f.subfield[i].value == '9') {
-		opener.opener.document.f.field_value[i].value = "<!-- TMPL_VAR NAME="authid">";
-	}
-	<!-- TMPL_LOOP NAME="0XX" -->
-		<!-- TMPL_LOOP NAME="subfield" -->
-			if (opener.opener.document.f.tag[i].value == whichfield && opener.opener.document.f.subfield[i].value == '<!-- TMPL_VAR NAME="marc_subfield" -->') 
-			{
-				opener.opener.document.f.field_value[i].value = "<!-- TMPL_VAR NAME="marc_value" -->";
-			}
-		<!-- /TMPL_LOOP -->
-	<!-- /TMPL_LOOP -->
-	if (opener.opener.document.f.tag[i].value != whichfield) {
-		i=0;
-	}
-	i--;
-}
-	opener.close();
-	self.close();
-	return false;
-
-
-}
+    window.onload = go();
+    
+    function go(){
+        var index_start = "<!-- TMPL_VAR NAME='index' -->";
+        var whichfield;
+        try {
+            whichfield = opener.opener.document.getElementById(index_start);
+        } catch(e) {
+            return;
+        }
+        
+        // browse all its subfields
+        var subfields = whichfield.parentNode.parentNode.getElementsByTagName('input');
+        var re = /^tag_\d*_code_/;
+        for(var i=0, len = subfields.length ; i< len ; i++) { // browse all subfields
+            if(subfields[i].getAttribute('name').match(re)){ // it s a subfield
+                var code     = subfields[i];   // code is the first input 
+                var subfield = subfields[i+1]; // subfield the second
+                if(code.value=='9'){
+                        subfield.value = "<!-- TMPL_VAR NAME="authid" -->";
+                }
+            <!-- TMPL_LOOP NAME="0XX" -->
+                <!-- TMPL_LOOP NAME="subfield" -->
+                    if (code.value == "<!-- TMPL_VAR NAME="marc_subfield" -->"){
+                        subfield.value = "<!-- TMPL_VAR NAME="marc_value" -->";
+                    }
+                <!-- /TMPL_LOOP -->
+            <!-- /TMPL_LOOP -->
+            }
+        }
+        
+      	opener.close();
+       	window.close();
+       	return false;
+    }
 </script>
-<script language="javascript" type="text/javascript">
-window.onload = go();
-</script>
+
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
