--- a/koha-tmpl/intranet-tmpl/prog/fr/authorities/blinddetail-biblio-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/authorities/blinddetail-biblio-search.tmpl
@@ -6,7 +6,7 @@
 
 function go()
 {
-var index_start = <!-- TMPL_VAR NAME="index" -->;
+var index_start = "<!-- TMPL_VAR NAME='index' -->";
 var whichfield = opener.opener.document.f.tag[index_start].value;
 i=index_start
 // go forward, until reaching the end of the field.
