patches from paul

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl
@@ -731,12 +731,12 @@ function check_input(e){
             </td>
         </tr>
         <tr>
-            <td><label>Librarian's notes</label></td>
-            <td><textarea name="internalnotes" cols="30" rows="2"><!-- TMPL_VAR name="internalnotes" --></textarea></td>
+            <td><label>Notes</label></td>
+            <td><textarea name="notes" cols="30" rows="2"><!-- TMPL_VAR name="notes" --></textarea></td>
         </tr>
         <tr>
-            <td><label>OPAC's note</label></td>
-            <td><textarea name="notes" cols="30" rows="2"><!-- TMPL_VAR name="notes" --></textarea></td>
+            <td><label>Management Notes</label></td>
+            <td><textarea name="internalnotes" cols="30" rows="2"><!-- TMPL_VAR name="internalnotes" --></textarea></td>
         </tr>
         <tr>
             <td>Patron alert with </td>
