minor spelling fix, the column was not displayed
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/parcel.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/parcel.tmpl
@@ -102,7 +102,7 @@
                 <td><!-- TMPL_VAR NAME="unitprice" --></td>
                 <td></td>
                 <td><!-- TMPL_VAR NAME="quantity" --></td>
-                <td><!-- TMPL_VAR NAME="quantityrecieved" --></td>
+                <td><!-- TMPL_VAR NAME="quantityreceived" --></td>
                 <td><!-- TMPL_VAR NAME="ecost" --></td>
             </tr>
         <!-- /TMPL_LOOP -->
