--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet2.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet2.css
@@ -489,7 +489,7 @@ legend {
 
 #tabs {
     margin-top:35px;
-    margin-bottom:20px;
+    margin-bottom:10px;
 }
 
 /* styles for the 11 content blocks */
@@ -560,13 +560,12 @@ a.info:hover span {
 /* the style of tag description */
 div.tag_title {
     font-weight:bold;
+    cursor:pointer;
 }
 
 div.tag_title span {
     display:inline;
-    letter-spacing:5px;
-    font-size:1.2em;
-    text-transform: capitalize;
+    font-size:1em;
     color : #027ac6;
 }
 
@@ -574,9 +573,6 @@ div.tag_title a:hover{
     text-decoration:none;
 }
 
-div.tag {
-    margin-bottom:1.8em;
-}
 
 .subfield_line{
     margin-left:1.1em;
