--- a/koha-tmpl/intranet-tmpl/prog/en/help/nohelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/nohelp.tmpl
@@ -1,8 +1,13 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Online Help &rsaquo; No Help For This Topic!</title>
-<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-	
+<!-- TMPL_INCLUDE NAME="help-top.inc" -->
+
+	<div id="main-compact">
 	<h1>Online Help</h1>
 	<p>Sorry, there is no help available for this topic</p>
+<form action="/cgi-bin/koha/edithelp.pl" method="post">
+<input type="hidden" name="referer" value="<!-- TMPL_VAR NAME="referer" -->">
+<input type="hidden" name="type" value="addnew">
+<input type="submit" name="submit" value="Add help">
+</form>
 	</div>
-<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
+	
+<!-- TMPL_INCLUDE NAME="help-bottom.inc" -->
