--- a/koha-tmpl/intranet-tmpl/prog/en/virtualshelves/addbybiblionumber.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/virtualshelves/addbybiblionumber.tmpl
@@ -9,30 +9,32 @@
     <!-- /TMPL_IF --> to a virtual shelf
 </h1>
 
-<form name="f1" method="post" action="/cgi-bin/koha/bookshelves/addbookbybiblionumber.pl">
+<form name="f1" method="POST" action="/cgi-bin/koha/virtualshelves/addbybiblionumber.pl">
     <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->">
     
     <b>Select an existing shelf</b>
     <p>
-        <label>Add to virtual shelf</label><!-- TMPL_VAR NAME="CGIbookshelves" -->
+        <label>Add to virtual shelf</label><!-- TMPL_VAR NAME="CGIvirtualshelves" -->
     </p>
     <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
     <input type="submit" value="Add to virtual shelf" class="submit" />
 </form>
 <p>...or...</p>
-<form name="f2" method="post" action="/cgi-bin/koha/bookshelves/addbookbybiblionumber.pl">
+<form name="f2" method="POST" action="/cgi-bin/koha/virtualshelves/addbybiblionumber.pl">
     <b>Add to a new shelf:</b>
         <p>
-            <label for="newbookshelf">
+            <label for="newvirtualshelf">
                 Shelf name:
             </label>
-            <input type="text" name="newbookshelf" id="newbookshelf" size="40" />
+			<input type="hidden" name="biblionumber" id="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->"/>
+            <input type="text" name="newvirtualshelf" id="newvirtualshelf" size="40" />
         </p>
         <p>
             <label for="category">Category:</label>
             <select name="category" id="category">
                 <option value="1">Private</option>
                 <option value="2">Public</option>
+				<option value="3">Free</option>
             </select>
         </p>
     <input type="submit" value="Add to virtual shelf" class="submit" /> 
